# footsteps

./: .gitignore  .gitmodules  Cargo.toml  DOCKER_README.md  README.md  run_demo.sh
app/: package.json  pnpm-lock.yaml  tailwind.config.ts
app/app/: page.tsx
app/app/components/: GameCanvas.tsx
app/app/game/: page.tsx
app/app/game/components/: GameCanvas.tsx  GameControls.tsx
app/app/game/hooks/: useGameState.tsx  useWebSocket.tsx
app/app/hooks/: useGameState.tsx  useWebSocket.tsx
app/app/verify/: page.tsx
app/pages/api/: verify.ts
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: main.rs  p2p.rs
