[package]
name = "footsteps"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
footsteps-core = { path = "core" }
footsteps-methods = { path = "methods" }
risc0-zkvm = { path = "./risc0/risc0/zkvm" }
termios = "0.3"
# Web server dependencies
tokio = { version = "1", features = ["full", "macros"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
futures = "0.3"
# libp2p dependencies - updated with consistent versions
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
# Explicitly add these dependencies to ensure version compatibility
libp2p-websocket = { version = "0.42" }
libp2p-dns = { version = "0.42", features = ["tokio"] }
async-std = "1.12"
uuid = { version = "1.4", features = ["v4", "serde"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
